--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,9 @@ jobs:
       - name: 🔍 Listar Estrutura de Arquivos
         run: ls -R regra_negocio
 
+      - name: 🔍 Verificar Arquivos no Projeto de Testes
+        run: ls -R regra_negocio/Regra_Negocio_Test/Regra_Negocio.Test
+
       - name: 📦 Restaurar Dependências
         run: |
           cd regra_negocio
@@ -46,7 +49,7 @@ jobs:
       - name: 🧪 Rodar Testes
         run: |
           cd regra_negocio
-          dotnet test Regra_Negocio_Test/Regra_Negocio.Test/Regra_Negocio.Test.csproj --no-build --configuration Release --logger "trx;LogFileName=test-results.trx"
+          dotnet test ./Regra_Negocio_Test/Regra_Negocio.Test/Regra_Negocio.Test.csproj --no-build --configuration Release --logger "trx;LogFileName=test-results.trx"
 
       - name: 📊 Publicar Relatório de Testes
         uses: actions/upload-artifact@v4
