--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Build
+name: CI - Regra_Negocio_API
 
 on:
   push:
@@ -6,16 +6,24 @@ on:
       - '**'
   pull_request:
     branches:
-      - develop
       - main
+      - develop
 
 jobs:
-  test-workflow:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout do repositório
-        uses: actions/checkout@v3
+      - name: Checkout do código
+        uses: actions/checkout@v4
 
-      - name: Exibir mensagem de teste
-        run: echo "🚀 GitHub Actions funcionando! Workflow rodando na branch ${{ github.ref_name }}"
+      - name: Configurar o .NET 8.0
+        uses: actions/setup-dotnet@v3
+        with:
+            dotnet-version: '8.0.x'
+        
+      - name: Restaurar dependências
+        run: dotnet restore
+        
+      - name: Compilar a aplicação
+        run: dotnet build --configuration Release --no-restore
