--- a/Regra_Negocio.API/Regra_Negocio.API.csproj
+++ b/Regra_Negocio.API/Regra_Negocio.API.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.66" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="UI\" />
   </ItemGroup>
 
 </Project>
