--- a/Regra_Negocio.API/appsettings.json
+++ b/Regra_Negocio.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BancoPostgreSQL": "Host=localhost;Port=5432;Database=dev;Username=postgres;Password=1234"
+  }
 }
