--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,27 @@ jobs:
         
       - name: Compilar a aplicação
         run: dotnet build --configuration Release --no-restore
+
+  sucess-alert:
+    runs-on: ubuntu-latest
+    needs: build
+    if: success()
+    steps:
+      - name: Notificar Sucesso no Discord
+        run: |
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"username": "GitHub Actions", "content": "✅ Build e testes concluídos com sucesso!"}' \
+               ${{ secrets.https://discord.com/api/webhooks/1340822593027969206/pBolv0pjpQOU6_-0YjnaYufzeIYMp9K3a3iJhldYrlnSWJgWeiHgcNZSpuUMkaJdT_gn }}
+
+  failure-alert:
+    runs-on: ubuntu-latest
+    needs: build
+    if: failure()
+    steps:
+      - name: Notificar Falha no Discord
+        run: |
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d '{"username": "GitHub Actions", "content": "❌ Falha no pipeline do GitHub Actions!"}' \
+               ${{ secrets.https://discord.com/api/webhooks/1340822593027969206/pBolv0pjpQOU6_-0YjnaYufzeIYMp9K3a3iJhldYrlnSWJgWeiHgcNZSpuUMkaJdT_gn }}
