--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,24 @@ jobs:
       - name: Compilar a aplicação
         run: dotnet build --configuration Release --no-restore
 
-  sucess-alert:
+  success-alert:
     runs-on: ubuntu-latest
     needs: build
     if: success()
     steps:
-      - name: Notificar Sucesso no Discord
+      - name: Debug Secret
         run: |
-          curl -H "Content-Type: application/json" \
-               -X POST \
+          echo "DISCORD_WEBHOOK_URL está definido? -> $DISCORD_WEBHOOK_URL"
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+
+      - name: Notificar Sucesso no Discord
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
                -d '{"username": "GitHub Actions", "content": "✅ Build e testes concluídos com sucesso!"}' \
-               ${{ secrets.https://discord.com/api/webhooks/1340822593027969206/pBolv0pjpQOU6_-0YjnaYufzeIYMp9K3a3iJhldYrlnSWJgWeiHgcNZSpuUMkaJdT_gn }}
+               "$DISCORD_WEBHOOK_URL"
 
   failure-alert:
     runs-on: ubuntu-latest
@@ -46,8 +53,9 @@ jobs:
     if: failure()
     steps:
       - name: Notificar Falha no Discord
+        env:
+          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
         run: |
-          curl -H "Content-Type: application/json" \
-               -X POST \
+          curl -X POST -H "Content-Type: application/json" \
                -d '{"username": "GitHub Actions", "content": "❌ Falha no pipeline do GitHub Actions!"}' \
-               ${{ secrets.https://discord.com/api/webhooks/1340822593027969206/pBolv0pjpQOU6_-0YjnaYufzeIYMp9K3a3iJhldYrlnSWJgWeiHgcNZSpuUMkaJdT_gn }}
+               "$DISCORD_WEBHOOK_URL"
