--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,20 @@ jobs:
     needs: build
     if: success()
     steps:
+      - name: Verificar Webhook URL
+        run: |
+          echo "Webhook URL está definido: ${{ vars.DISCORD_WEBHOOK_URL }}"
+
       - name: Notificar Sucesso no Discord
         env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          DISCORD_WEBHOOK_URL: ${{ vars.DISCORD_WEBHOOK_URL }}
         run: |
           STATUS="${{ job.status }}"
           AUTHOR="${{ github.actor }}"
+          if [ -z "$DISCORD_WEBHOOK_URL" ]; then
+            echo "Erro: Webhook URL está vazio!"
+            exit 1
+          fi
           curl -X POST -H "Content-Type: application/json" \
           -d "{\"content\": \"Build feita com sucesso! ✅ \nStatus: $STATUS \nAutor: @$AUTHOR\"}" \
           "$DISCORD_WEBHOOK_URL"
@@ -50,9 +58,8 @@ jobs:
     steps:
       - name: Notificar Falha no Discord
         env:
-          DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          DISCORD_WEBHOOK_URL: ${{ vars.DISCORD_WEBHOOK_URL }}
         run: |
           curl -X POST -H "Content-Type: application/json" \
           -d '{"username": "GitHub Actions", "content": "❌ Falha no pipeline do GitHub Actions!"}' \
           "$DISCORD_WEBHOOK_URL"
-          
