--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,22 @@ jobs:
             exit 1
           fi
           curl -X POST -H "Content-Type: application/json" \
-          -d "{\"content\": \"Build feita com sucesso! ✅ \nStatus: $STATUS \nAutor: @$AUTHOR\"}" \
+          -d '{
+              "content": "**🚨Alerta GitHub Actions**",
+              "embeds": [
+                {
+                  "title": "✅ Build realizada com sucesso!",
+                  "color": 3066993,
+                  "fields": [
+                    {"name": "📌 Pull Request", "value": "${{ github.event.pull_request.title }}", "inline": false},
+                    {"name": "🔗 Issue", "value": "${{ github.event.issue.html_url }}", "inline": false},
+                    {"name": "📄 Status", "value": "${{ job.status }}", "inline": true},
+                    {"name": "👤 Autor", "value": "@${{ github.actor }}", "inline": true},
+                    {"name": "📅 Data", "value": "$(date +'%Y-%m-%d')", "inline": false}
+                  ]
+                }
+              ]
+            }' \
           "$DISCORD_WEBHOOK_URL"
 
   failure-alert:
@@ -62,4 +77,21 @@ jobs:
         run: |
           curl -X POST -H "Content-Type: application/json" \
           -d '{"username": "GitHub Actions", "content": "❌ Falha no pipeline do GitHub Actions!"}' \
+          -d '{
+              "content": "**🚨Alerta GitHub Actions**",
+              "embeds": [
+                {
+                  "title": "❌ Falha na build!",
+                  "color": 15158332,
+                  "fields": [
+                    {"name": "📌 Pull Request", "value": "${{ github.event.pull_request.title }}", "inline": false},
+                    {"name": "🔗 Issue", "value": "${{ github.event.issue.html_url }}", "inline": false},
+                    {"name": "📄 Status", "value": "${{ job.status }}", "inline": true},
+                    {"name": "👤 Autor", "value": "@${{ github.actor }}", "inline": true},
+                    {"name": "📅 Data", "value": "$(date +'%Y-%m-%d')", "inline": false},
+                    {"name": "🛠️ Erro", "value": "${{ steps.build.outcome }}", "inline": false}
+                  ]
+                }
+              ]
+            }' \
           "$DISCORD_WEBHOOK_URL"
